--- a/src/nodes/socket-io-config/socket-io-config.html/editor.html
+++ b/src/nodes/socket-io-config/socket-io-config.html/editor.html
@@ -1,6 +1,14 @@
 <script type="text/html" data-template-name="socket-io-config">
   <div class="form-row">
-    <label for="node-input-name"><i class="icon-tag"></i> Name</label>
-    <input type="text" id="node-input-name" placeholder="Name">
+    <label for="node-config-input-name"><i class="icon-tag"></i> Name</label>
+    <input type="text" id="node-config-input-name" placeholder="Name">
+  </div>
+  <div class="form-row">
+    <label for="node-config-input-uri"><i class="icon-tag"></i> URI</label>
+    <input type="text" id="node-config-input-uri" placeholder="URI">
+  </div>
+  <div class="form-row">
+    <label for="node-config-input-path"><i class="icon-tag"></i> Path</label>
+    <input type="text" id="node-config-input-path" placeholder="Path">
   </div>
 </script>
