feat: major working release

--- a/src/nodes/socket-io-config/socket-io-config.html/editor.html
+++ b/src/nodes/socket-io-config/socket-io-config.html/editor.html
@@ -5,10 +5,10 @@
   </div>
   <div class="form-row">
     <label for="node-config-input-uri"><i class="icon-tag"></i> URI</label>
-    <input type="text" id="node-config-input-uri" placeholder="URI">
+    <input type="text" id="node-config-input-uri" placeholder="ws://localhost:4000 or {{SOCKET_URL}}">
   </div>
   <div class="form-row">
     <label for="node-config-input-path"><i class="icon-tag"></i> Path</label>
-    <input type="text" id="node-config-input-path" placeholder="Path">
+    <input type="text" id="node-config-input-path" placeholder="/socket.io or {{SOCKET_PATH}}">
   </div>
 </script>
