fix: change eventname with event id

--- a/src/nodes/socket-io-out/socket-io-out.html/editor.html
+++ b/src/nodes/socket-io-out/socket-io-out.html/editor.html
@@ -8,7 +8,7 @@
     <input type="text" id="node-input-config" placeholder="Config">
   </div>
   <div class="form-row">
-    <label for="node-input-eventName"><i class="icon-tag"></i> Event Name</label>
-    <input type="text" id="node-input-eventName" placeholder="Event Name">
+    <label for="node-input-eventId"><i class="icon-tag"></i> Event Name</label>
+    <input type="text" id="node-input-eventId" placeholder="Event Name">
   </div>
 </script>
